# flutter_chia_rust_utils

./: .gitignore  .gitmodules  .metadata  .pubignore  BUILD.md  CHANGELOG.md  Dockerfile.amd64  README.md  WINDOWS.md  build.sh  build_linux_web_with_dockers.sh  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
example/: pubspec.yaml
ios/: flutter_chia_rust_utils.podspec
lib/: ffi.io.dart  flutter_chia_rust_utils.dart  flutter_chia_rust_utils_platform_interface.dart
linux/: CMakeLists.txt  flutter_chia_rust_utils_plugin.cc
macos/: flutter_chia_rust_utils.podspec
rust/: Cargo.toml  Dockerfile.aarch64  build_with_dockers.sh
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  main.rs
rust/src/blockchain/: announcement.rs  coin.rs  coin_spend.rs  proof_of_space.rs  utils.rs
rust/src/chia_wallet/: mod.rs
rust/src/chia_wallet/cat/: mod.rs
rust/src/chia_wallet/cat/puzzles/: cat_puzzle_program.rs  create_cat_puzzle.rs  mod.rs
rust/src/chia_wallet/standart/: mod.rs
rust/src/chia_wallet/standart/puzzles/: calculate_synthetic_public_key.rs  mod.rs  p2_conditions.rs  p2_delegated_puzzle_or_hidden_puzzle.rs
rust/src/program_utils/: bls_bindings.rs  call_tool.rs  cldb.rs  condition_utils.rs  curry_utils.rs  mod.rs  program.rs  serialize.rs  serialized_program.rs  utils.rs
scripts/: build-all.sh  build-android.sh  build-apple.sh  build-linux-in-linux.sh  build-linux.sh  build-linux_docker.sh  build-web.sh  build-windows.sh  clean_example.sh  generate_codes.sh  version.sh
windows/: CMakeLists.txt  (+3 more)
(+49 files in other folders)
